# Non_Ficks_Diffusion

./: .gitignore  Add_Constant.h  Add_Random_Term.h  Apply_Pressure.h  AvD_Calculator.h  Av_Calculator.h  Axis_Finite_Differential_Helper.h  Beta_Calculator.h  Boundary_Check.h  Boundary_Condition_Helper.h  Boundary_Value_Initializer.h  CG_Vector.h  CMakeLists.txt  Channel_Vector_Norm_Helper.h  Channel_Vector_Traverse_Helper.h  Clamp_Helper.h  Clear_Mask.h  Clear_Non_Active.h  Compare_Helper.h  Compute_Time_Step.h  Convergence_Norm_Helper.h  Copy_Channel.h  DG_Data.h  DG_Driver.cpp  DG_Driver.h  DG_Epsilon_Squared_Grad_S_Helper.h  DG_Example.cpp  DG_Example.h  DG_Ficks_T_RHS_Helper.h  DG_M_Calculator.h  Density_Backup_Helper.h  Density_Clamp_Helper.h  Density_Modifier.h  Density_Plus_Poly_Term_Helper.h  Diff_Data.h  Diffusion_Data.h  Div_Qc_Normalizatio_Helper.h  Div_Qc_Normalization_Helper.h  Epsilon_Epsilon_Prime_dSdX_Helper.h  Epsilon_Squared_Grad_S_Helper.h  (+87 more)
Diffusion_Helper/: Diffusion_CG_System.h  Diffusion_CG_Vector.h  Diffusion_Clear_Non_Active_Helper.h  Diffusion_Convergence_Norm_Helper.h  Diffusion_Inner_Product_Helper.h  Diffusion_Multiply_Helper.h
Ficks_Solver/: CMakeLists.txt  Ficks_Ax_Helper.h  Ficks_CG_System.h  Ficks_Multiply_Inverse_Diagonal.h  Ficks_Smoother.h  Ficks_Solver.h  Laplace_Helper.h  Multiply_Inverse_Diagonal.h  main.cpp
Implicit_Force_Helper/: Clear_Non_Active_Helper.h  Convergence_Norm_Helper.h  Inner_Product_Helper.h  MPM_CG_System.h  MPM_CG_Vector.h  MPM_Convergence_Norm_Helper.h  MPM_Inner_Product_Helper.h  Multiply_Helper.h  Project_Helper.h
Multigrid_Solver/: Clear_Mask.h  Compute_Ax.h  Initial_Guess_Helper.h  Initialize_Mask.h  Levelset_Initializer.h  Mark_Boundary.h  Multigrid_Refinement.h  Multigrid_Smoother.h  Multigrid_Solver.h  Multiply_Inverse_Diagonal.h  Neumann_BC_Initializer.h  Restriction_Stencil_Helper.h  Sphere_Levelset.h
Non_Ficks_Solver/: CMakeLists.txt  Laplace_Helper.h  Multiply_Inverse_Diagonal.h  Non_Ficks_Ax_Helper.h  Non_Ficks_CG_System.h  Non_Ficks_Multiply_Inverse_Diagonal.h  Non_Ficks_Smoother.h  Non_Ficks_Solver.h  main.cpp
OpenVDB_Converter/: CMakeLists.txt  OpenVDB_Converter.h  main.cpp
Poisson_Solver/: Analytic_Levelset.h  CMakeLists.txt  Copy_Interior_Flags.h  Copy_Unsubdivided_Cells.h  Divergence_Helper.h  Divergence_Star_Helper.h  Gradient_Helper.h  Grid_Hierarchy_Projection.h  Initialize_Dirichlet_Cells.h  Initialize_Levelset.h  Initialize_Mask.h  Interior_Laplace_Helper.h  Laplace_Gradient_Helper.h  Multigrid_Data.h  Poisson_CG_System.h  Poisson_Multigrid_Refinement.h  Poisson_Multigrid_Smoother.h  Poisson_Multigrid_Solver.h  Poisson_Multiply_Inverse_Diagonal.h  Poisson_Prolongation_Stencil_Helper.h  Sphere_Levelset.h  main.cpp
Rasterizers/: Adaptive_Geometry_Rasterizer.h  Adaptive_Sphere_Rasterizer.h  Central_Rasterizer.h  Randomized_Rasterizer.h
Read_Write/: Read_Write_MPM_Particles.h
Smoother/: Div_Qc_Updater.h  Initial_Guess_Helper.h  Levelset_Initializer.h  Multigrid_Data.h  Multigrid_RHS_Helper.h  Multigrid_Smoother.h  Multiply_Inverse_Diagonal.h  Neumann_BC_Initializer.h
Snowflake_Thicken_Helper/: CMakeLists.txt  Snowflake_Thicken_Helper.h  main.cpp
Tools/: Cropped_Influence_Iterator.h  Cropped_Range_Interator.h  Influence_Iterator.h  Interval.h  Matrix_MXN.h
Uniform_Grid_Advection/: Uniform_Grid_Advection_Helper.h  Uniform_Grid_Density_Advection_Helper.h  Uniform_Grid_Interpolation_Helper.h  Uniform_Grid_Linear_Interpolation.h
Uniform_Grid_Helper/: Uniform_Grid_Advection_Helper.h  Uniform_Grid_Averaging_Helper.h  Uniform_Grid_Backtrace.h  Uniform_Grid_Density_Advection_Helper.h  Uniform_Grid_Face_Vector_Advection_Helper.h  Uniform_Grid_Face_Velocity_Advection_Helper.h  Uniform_Grid_Interpolation_Helper.h  Uniform_Grid_Linear_Interpolation.h
Volume2Mesh/: CMakeLists.txt  Volume2Mesh_Helper.h  main.cpp
dendrite_growth_2d/: CMakeLists.txt  main.cpp
dendrite_growth_2d/Standard_Tests/: Standard_Tests.h
dendrite_growth_3d/: CMakeLists.txt  main.cpp
dendrite_growth_3d/Standard_Tests/: Standard_Tests.h
mpm_2d/: CMakeLists.txt  main.cpp
mpm_2d/Standard_Tests/: Standard_Tests.h
mpm_3d/: CMakeLists.txt
mpm_3d/Standard_Tests/: Standard_Tests.h
nfd_2d/: CMakeLists.txt  Helper.h  main.cpp
nfd_2d/Standard_Tests/: Standard_Tests.h
nfd_3d/: CMakeLists.txt  main.cpp
nfd_3d/Standard_Tests/: Standard_Tests.h
non_ficks_smoke_2d/: CMakeLists.txt
non_ficks_smoke_3d/: CMakeLists.txt  main.cpp
phase_change_2d/: CMakeLists.txt  main.cpp
phase_change_2d/Standard_Tests/: Standard_Tests.h
phase_field_2d/: CMakeLists.txt  main.cpp
phase_field_2d/Standard_Tests/: Standard_Tests.h
phase_field_3d/: CMakeLists.txt  main.cpp
phase_field_3d/Standard_Tests/: Standard_Tests.h
plugin_Autonomous_Navigation/: Autonomous_Navigation_Renderable.h  CMakeLists.txt  Viewer_Data.h  main.cpp
plugin_Heightfield/: Assimp_Renderable.h  CMakeLists.txt  main.cpp
plugin_Non_Ficks_Diffusion/: CMakeLists.txt  MPM_Renderable.h  main.cpp
smoke_2d/: CMakeLists.txt  main.cpp
smoke_2d/Standard_Tests/: Standard_Tests.h
smoke_3d/: CMakeLists.txt  main.cpp
smoke_3d/Standard_Tests/: Standard_Tests.h
snow_flake_2d/: CMakeLists.txt  main.cpp
snow_flake_2d/Standard_Tests/: Standard_Tests.h
snow_flake_3d/: CMakeLists.txt  main.cpp
snow_flake_3d/Standard_Tests/: Standard_Tests.h
