set(ENABLE_NON_FICKS_DIFFUSION OFF CACHE BOOL "Enable building the Non-Fick's Diffusion project tree.")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
cmake_policy(SET CMP0054 NEW)

if(ENABLE_NON_FICKS_DIFFUSION)
add_subdirectory(non_ficks_smoke_2d)
add_subdirectory(non_ficks_smoke_3d)
add_subdirectory(snow_flake_2d)
add_subdirectory(snow_flake_3d)
add_subdirectory(dendrite_growth_2d)
add_subdirectory(dendrite_growth_3d)
add_subdirectory(Poisson_Solver)
add_subdirectory(nfd_2d)
add_subdirectory(nfd_3d)
add_subdirectory(Ficks_Solver)
add_subdirectory(Non_Ficks_Solver)
add_subdirectory(plugin_Non_Ficks_Diffusion)
add_subdirectory(plugin_Heightfield)
add_subdirectory(plugin_Autonomous_Navigation)
#add_subdirectory(OpenVDB_Converter)
#add_subdirectory(Snowflake_Thicken_Helper)
#add_subdirectory(Volume2Mesh)
endif(ENABLE_NON_FICKS_DIFFUSION)
